--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,22 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
+version: '2.1'
+orbs:
+  docker: circleci/docker@2.3.0
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+  build-and-push:
+    executor: docker/docker
     steps:
+      - setup_remote_docker
       - checkout
+      - docker/check
+      - docker/build:
+          image: hieuphamdn93/nodetest:latest
+      - docker/push:
+          digest-path: /tmp/digest.txt
+          image: my_repo/orb-test
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+          command: |
+            echo "Digest is: $(</tmp/digest.txt)"
 workflows:
-  say-hello-workflow:
+  commit:
     jobs:
-      - say-hello
+      - build-and-push
