--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       - docker/push:
           digest-path: /tmp/digest.txt
           image: hieuphamdn93/nodetest
+          tag: latest
       - run:
           command: |
             echo "Digest is: $(</tmp/digest.txt)"
