--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,13 @@ orbs:
   k8s: digitalocean/k8s@0.1.1
 
 jobs:
-  deploy:
-    executor: k8s/default
+  install:
     steps:
       - k8s/install
 workflows:
-  deploy_workflow:
+  install_tools:
     jobs:
-      - deploy:
+      - install:
           filters:
             branches:
               only:
