--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,8 +58,4 @@ jobs:
 workflows:
   install_and_initialize_cli:
     jobs:
-      - install_and_initialize_cli:
-          cluster: do-k8s-practice
-          digitalocean-access-token: <<parameters.digitalocean-access-token>>
-          executor: default
-
+      - install_and_initialize_cli
