--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,65 +1,11 @@
-# This code is licensed from CircleCI to the user under the MIT license.
-# See here for details: https://circleci.com/developer/orbs/licensing
-# This code is licensed from CircleCI to the user under the MIT license. See
-# https://circleci.com/orbs/registry/licensing for details.
-version: 2.1
-description: DigitalOcean Kubernetes Engine Orb
-
-# Orb Dependencies
+version: '2.1'
 orbs:
-  doctl: digitalocean/cli@0.1.1
-  k8s: circleci/kubernetes@0.1.0
-
-commands:
-  install:
-    description: "Install `doctl` and `kubectl` if not already installed."
-    steps:
-      - doctl/install
-      - k8s/install
-  initialize:
-    description: "Initialize kubeconfig to connect to DigitalOcean Kubernetes Engine"
-    parameters:
-      cluster:
-        description: "The Kubernetes cluster name."
-        type: string
-      digitalocean-access-token:
-        default: DIGITALOCEAN_ACCESS_TOKEN
-        description: The access token to connect DigitalOcean
-        type: env_var_name
-    steps:
-      - doctl/initialize:
-          digitalocean-access-token: <<parameters.digitalocean-access-token>>
-      - run: |
-          doctl kubernetes cluster kubeconfig save <<parameters.cluster>>
-
+  kubernetes: circleci/kubernetes@1.3.1
 jobs:
-  install_and_initialize_cli:
-    description: |
-      Install doctl and initialize to connect to DigitalOcean
-    executor: <<parameters.executor>>
-    parameters:
-      cluster:
-        description: "do-k8s-practice"
-        type: string
-      digitalocean-access-token:
-        default: DIGITALOCEAN_ACCESS_TOKEN
-        description: The access token to connect DigitalOcean
-        type: env_var_name
-      executor:
-        default: default
-        description: |
-          Executor to use for this job. Defaults to this orb's default executor.
-        type: executor
+  build:
+    macos:
+      xcode: '13.2'
     steps:
-      - install
-      - initialize:
-          cluster: <<parameters.cluster>>
-          digitalocean-access-token: DIGITALOCEAN_ACCESS_TOKEN
-workflows:
-  install_and_initialize_cli:
-    jobs:
-      - install_and_initialize_cli:
-          cluster: do-k8s-practice
-          digitalocean-access-token: DIGITALOCEAN_ACCESS_TOKEN
-          executor: default
-
+      - checkout
+      - kubernetes/install-kubectl
+workflows: null
