--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,56 @@
 version: '2.1'
 orbs:
-  kubernetes: circleci/kubernetes@1.3.1
+  docker: circleci/docker@2.4.0
+  k8s: digitalocean/k8s@0.1.1
+  doctl: digitalocean/cli@0.1.1
 jobs:
-  build:
-    macos:
-      xcode: '13.2'
+  build-and-push-dockerimg:
+    executor: docker/docker
     steps:
+      - setup_remote_docker
       - checkout
-      - kubernetes/install-kubectl
-workflows: null
+      - docker/check
+      - run:
+          name: Set Docker Image Tag
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+              DOCKER_IMAGE_TAG="dev-${CIRCLE_SHA1}"
+            else
+              DOCKER_IMAGE_TAG="prod-${CIRCLE_SHA1}"
+            fi
+            echo "DOCKER_IMAGE_TAG=${DOCKER_IMAGE_TAG}" >> $BASH_ENV
+      - docker/build:
+          image: hieuphamdn93/nodetest
+          tag: $DOCKER_IMAGE_TAG
+      - docker/push:
+          digest-path: /tmp/digest.txt
+          image: hieuphamdn93/nodetest
+          tag: $DOCKER_IMAGE_TAG
+      - run:
+          command: |
+            echo "Digest is: $(</tmp/digest.txt)"
+    deploy-app:
+      docker:
+        - image: cimg/base:2023.09
+      steps:
+        - checkout
+      - setup_remote_docker
+      - doctl/install
+      - k8s/install
+      - doctl/initialize:
+          digitalocean-access-token: DIGITALOCEAN_ACCESS_TOKEN
+      - run:
+          name: Save Kubernetes Config
+          command: |
+            doctl kubernetes cluster kubeconfig save ${CLUSTER_NAME}
+      - run:
+          name: Your Kubernetes Commands
+          command: |
+            kubectl apply -f ./infra/deploy.yml
+workflows:
+  commit:
+    jobs:
+      - build-and-push-dockerimg
+      - deploy-app:
+          requires:
+            - build-and-push-dockerimg
