--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,10 +44,14 @@ jobs:
           command: |
             doctl kubernetes cluster kubeconfig save ${CLUSTER_NAME}
       - run:
+          name: Install envsubst
+          command: |
+            sudo apt-get update && sudo apt-get -y install gettext-base
+      - run:
           name: Your Kubernetes Commands
           command: |
-            kubectl apply -f ./infra/deploy.yml
-            kubectl get pods
+            export IMG_TAG=${DOCKER_IMAGE_TAG}
+            envsubst < ./infra/deploy.yml | kubectl apply -f -
 workflows:
   commit:
     jobs:
