--- a/infra/deploy.yml
+++ b/infra/deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: node-deployment
-        image: hieuphamdn93/nodetest
+        image: hieuphamdn93/nodetest:$IMG_TAG
         ports:
         - containerPort: 3000
 ---
