--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,8 +50,8 @@ jobs:
       - run:
           name: Your Kubernetes Commands
           command: |
-            export IMG_TAG=${DOCKER_IMAGE_TAG}
-            echo $IMG_TAG
+            export IMG_TAG=$DOCKER_IMAGE_TAG
+            envsubst < ./infra/deploy.yml | kubectl apply -f -
 workflows:
   commit:
     jobs:
