--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: Your Kubernetes Commands
           command: |
-            export IMG_TAG=$DOCKER_IMAGE_TAG
+            export IMG_TAG=${COMMIT_SHA1}
             envsubst < ./infra/deploy.yml | kubectl apply -f -
 workflows:
   commit:
