--- a/infra/deploy.yml
+++ b/infra/deploy.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: node-deployment
-          image: hieuphamdn93/nodetest:$IMG_TAG
+          image: hieuphamdn93/nodetest:$COMMIT_SHA1
           ports:
             - containerPort: 3000
 
