--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
       - run:
           name: Your Kubernetes Commands
           command: |
+            cat bash.env > $BASH_ENV
             TAG=$DOCKER_IMAGE_TAG
             export TAG=$TAG
             envsubst < ./infra/deploy.yml | kubectl apply -f -
