--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
-version: '2.1'
+---
+version: "2.1"
 orbs:
   docker: circleci/docker@2.4.0
   k8s: digitalocean/k8s@0.1.1
@@ -10,10 +11,6 @@ jobs:
       - setup_remote_docker
       - checkout
       - docker/check
-      - persist_to_workspace:
-          root: .
-          paths:
-            - bash.env
       - run:
           name: Set Docker Image Tag
           command: |
@@ -33,6 +30,10 @@ jobs:
       - run:
           command: |
             echo "Digest is: $(</tmp/digest.txt)"
+      - persist_to_workspace:
+          root: .
+          paths:
+            - bash.env
   deploy-app:
     docker:
       - image: cimg/base:2023.09
@@ -43,8 +44,6 @@ jobs:
       - k8s/install
       - doctl/initialize:
           digitalocean-access-token: DIGITALOCEAN_ACCESS_TOKEN
-      - attach_workspace:
-          at: .
       - run:
           name: Save Kubernetes Config
           command: |
@@ -60,6 +59,8 @@ jobs:
             TAG=$DOCKER_IMAGE_TAG
             export TAG=$TAG
             envsubst < ./infra/deploy.yml | kubectl apply -f -
+      - attach_workspace:
+          at: .
 workflows:
   commit:
     jobs:
