--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,13 +30,9 @@ jobs:
       - run:
           command: |
             echo "Digest is: $(</tmp/digest.txt)"
-      - persist_to_workspace:
-          root: .
-          paths:
-            - bash.env
   deploy-app:
     docker:
-      - image: cimg/base:2023.09
+      - image: cimg/base:current
     steps:
       - checkout
       - setup_remote_docker
@@ -55,12 +51,11 @@ jobs:
       - run:
           name: Your Kubernetes Commands
           command: |
-            cat bash.env > $BASH_ENV
-            TAG=$DOCKER_IMAGE_TAG
+            TAG=$CIRCLE_SHA1
+            GIT_BRANCH=$CIRCLE_BRANCH
             export TAG=$TAG
+            export GIT_BRANCH=$GIT_BRANCH
             envsubst < ./infra/deploy.yml | kubectl apply -f -
-      - attach_workspace:
-          at: .
 workflows:
   commit:
     jobs:
